corrected img file name on small landing page screen

--- a/Assets/Style/landingpage.css
+++ b/Assets/Style/landingpage.css
@@ -19,7 +19,7 @@
 
 @media only screen and (max-width:640px) {
     body {
-    background-image: url(../images/sm);
+    background-image: url(../images/sm.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     }
